# synapse

./: pyproject.toml  setup.cfg
.github/workflows/: docs.yaml  latest_deps.yml  tests.yml  twisted_trunk.yml
rust/: Cargo.toml
synapse/: python_dependencies.py  server.py
synapse/federation/: federation_client.py
synapse/storage/databases/state/: store.py
